home-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-microservice
  labels:
    app: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: todoapps.azurecr.io/home-service:v1
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5002
