main-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-microservice
  labels:
    app: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: todoapps.azurecr.io/main-service:v1
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5003
