work-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-microservice
  labels:
    app: work
spec:
  replicas: 2
  selector:
    matchLabels:
      app: work
  template:
    metadata:
      labels:
        app: work
    spec:
      containers:
      - name: work
        image: workservice.azurecr.io/work-service:v1
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: work-service
spec:
  selector:
    app: work
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5001
