ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demoapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demoapp.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-app
              servicePort: 80
